@@ -88,6 +88,17 @@ my %WriteMakefileArgs =
    'DEFINE'             => '',          # e.g., '-DHAVE_SOMETHING'
    'INC'                => '',          # e.g., '-I/usr/include/other'
    'SIGN'               => 1,
+
+   'META_MERGE'         => {
+       'meta-spec' => { version => 2 },
+        resources => {
+            repository => {
+                type => 'git',
+                url  => 'https://github.com/pjacklam/p5-Math-BigInt.git',
+                web  => 'https://github.com/pjacklam/p5-Math-BigInt',
+            },
+        },
+    },
   );
 
 # Install over the core version? (Cf. CPAN RT #119199 and #119225.)
