@@ -1,5 +1,7 @@
 1.999817 Not Released
 
+ * Add information about the github repository.
+
  * Update links in SUPPORT section in POD.
 
  * Fix bpow(). It returned NaN when it should truncate to zero.
